--- a/DSS_metadata/SEGES.yaml
+++ b/DSS_metadata/SEGES.yaml
@@ -79,9 +79,6 @@ models:
     endpoint: https://coremanager.vips.nibio.no/models/SEPTORIAHU/run/ipmd
     form_method: post # Could be get or post
     content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
-    input_schema_hidden_properties:
-    - modelId
-    # The input template should adhere to the JSON Schema standard: https://json-schema.org/
     input_schema: |
       {
         "type":"object",
@@ -121,6 +118,10 @@ models:
         "required": ["modelId","configParameters"]
       }
     # Definition of the result parameters specific for this DSS model
+    input_schema_categories:
+      hidden:
+      - modelId
+    # The input template should adhere to the JSON Schema standard: https://json-schema.org/
   output:
     warning_status_interpretation: |-
       Når antall timer med bladfuktighet i en mottakelig sort nærmer seg 20, vil risikokurven gå over i et rødt område og direkte 
@@ -296,6 +297,8 @@ models:
         "required": ["CropId","Susceptibility","GrowthStage","Severity","WeatherData"]
       }
     # Definition of the result parameters specific for this DSS model
+    input_schema_categories:
+      hidden:
   output:
     warning_status_interpretation: |-
       The growers need to check the crops at weekly intervals or as a minimum follow the risk based on
